css/dashboards/dashboards.css
/* ... */
.highcharts-dashboards-edit-toggle-wrapper input {
    opacity: 0;
    width: 0;
    height: 0;
}

.highcharts-dashboards-edit-toggle-slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--highcharts-neutral-color-20);
    -webkit-transition: 0.4s;
    transition: 0.4s;
    border-radius: 34px;
}

.highcharts-dashboards-edit-toggle-slider::before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 4px;
    bottom: 4px;
    background-color: var(--highcharts-neutral-color-0);
    -webkit-transition: 0.4s;
    transition: 0.4s;
    border-radius: 50%;
}

.highcharts-dashboards-edit-toggle-wrapper input:checked + .highcharts-dashboards-edit-toggle-slider {
    background-color: var(--highcharts-neutral-color-100);
}

.highcharts-dashboards-edit-toggle-wrapper input:checked + .highcharts-dashboards-edit-toggle-slider::before {
    -webkit-transform: translateX(18px);
    -ms-transform: translateX(18px);
    transform: translateX(18px);
}

.highcharts-dashboards-edit-sidebar .highcharts-dashboards-edit-label-text.highcharts-dashboards-edit-toggle-labels {
    background: none;
    border: none;
    display: inline-block;
    padding: 0 5px;
    margin: 0;
    width: auto;
    line-height: 1em;
    font-size: 0.756em;
}

/* Edit Mode */
.highcharts-dashboards-edit-context-menu {
    background-color: var(--highcharts-background-color);
    margin-left: auto;
    border-radius: 3px;
    position: absolute;
    display: none;
    z-index: 9999;
    box-shadow:
        0 0.4688rem 2.1875rem rgba(var(--highcharts-dashboards-shadow-color), 0.03),
        0 0.9375rem 1.4063rem rgba(var(--highcharts-dashboards-shadow-color), 0.03),
        0 0.25rem 0.5313rem rgba(var(--highcharts-dashboards-shadow-color), 0.03),
        0 0.125rem 0.1875rem rgba(var(--highcharts-dashboards-shadow-color), 0.03);
}

.highcharts-dashboards-edit-context-menu-btn {
    display: flex;
    align-items: center;
    height: 32px;
    margin-left: 16px;
    border-radius: 4px;
    border: none;
    float: right;
    cursor: pointer;
    background-color: var(--highcharts-neutral-color-0);
    padding: 6px;
    gap: 6px;
}

.highcharts-dashboards-edit-context-menu-btn:hover {
    background-color: var(--highcharts-neutral-color-60);
    filter: invert(100%);
}

.highcharts-dashboards-edit-menu-item {
    display: none;
}

.highcharts-dashboards-edit-tools {
    overflow: hidden;
    width: 100%;
}

.highcharts-dashboards-edit-context-menu-item {
    padding: 10px 15px;
    color: var(--highcharts-neutral-color-100);
    font-size: 0.876em;
    line-height: 1em;
    cursor: pointer;
}

.highcharts-dashboards-edit-context-menu-item:hover {
    color: var(--highcharts-neutral-color-100);
}

.highcharts-dashboards-edit-separator {
    background-color: var(--highcharts-neutral-color-20);
    height: 1px;
    margin: 5px 0;
    padding: 0;
    cursor: default;
}

.highcharts-dashboards-edit-toolbar {
    color: var(--highcharts-neutral-color-60);
    position: absolute;
    z-index: 9997;
    border-radius: 3px;
    box-shadow:
        0 0.4688rem 2.1875rem rgba(var(--highcharts-dashboards-shadow-color), 0.1),
        0 0.9375rem 1.4063rem rgba(var(--highcharts-dashboards-shadow-color), 0.1),
        0 0.25rem 0.5313rem rgba(var(--highcharts-dashboards-shadow-color), 0.1),
        0 0.125rem 0.1875rem rgba(var(--highcharts-dashboards-shadow-color), 0.1);
}

.highcharts-dashboards-edit-toolbar-item div {
    min-width: 35px;
    min-height: 30px;
    box-sizing: border-box;
    text-align: center;
    padding: 15px 10px;
    background-size: 17px 17px;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    cursor: pointer;
    filter: brightness(0) invert(0);
}

.highcharts-dashboards-edit-toolbar-row {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background-color: var(--highcharts-background-color);
    padding-left: 3px;
    padding-right: 3px;
}

.highcharts-dashboards-edit-toolbar-row .highcharts-dashboards-edit-toolbar-item div {
    min-width: 25px;
    min-height: 25px;
    background-size: 17px 17px;
}

.highcharts-dashboards-edit-toolbar-row .highcharts-dashboards-edit-toolbar-item:hover {
    background-color: var(--highcharts-neutral-color-3);
}

.highcharts-dashboards-edit-toolbar-cell .highcharts-dashboards-edit-toolbar-item div {
    min-width: 30px;
}

.highcharts-dashboards-edit-toolbar-cell {
    background-color: var(--highcharts-background-color);
    border-radius: 5px;
    color: var(--highcharts-background-color);
}

.highcharts-dashboards-edit-toolbar-cell .highcharts-dashboards-edit-toolbar-item:hover {
    background-color: var(--highcharts-neutral-color-3);
}

.highcharts-dashboards-edit-toolbar-cell-outline {
    position: absolute;
    pointer-events: none;
    display: none;
    opacity: 1;
}

.highcharts-dashboards-edit-toolbar-row-outline {
    position: absolute;
    pointer-events: none;
    display: none;
    opacity: 1;
}

.highcharts-dashboards-edit-menu-vertical-separator {
    height: 1px;
    background-color: var(--highcharts-neutral-color-20);
    margin-top: 2px;
    margin-bottom: 2px;
    padding: 0;
    cursor: default;
}

.highcharts-dashboards-edit-sidebar {
    top: 0;
    left: -340px; /* width + paddings */
    transition: 0.5s;
    width: 300px;
    background-color: var(--highcharts-background-color);
    color: var(--highcharts-neutral-color-60);
    position: absolute;
    z-index: 9999;
    min-height: 300px;
    height: 100%;
    padding: 20px;
    overflow: scroll;
}

.highcharts-dashboards-edit-sidebar-right {
    left: auto;
    right: -340px;
}

.highcharts-dashboards-edit-sidebar-tab-btn,
.highcharts-dashboards-edit-sidebar .highcharts-dashboards-edit-button.highcharts-dashboards-edit-sidebar-tab-btn {
    margin-top: 10px;
}
/* ... */

